# MyRenderer

./: .gitignore  CMakeLists.txt  README.md
MyRenderer/: CMakeLists.txt  MyRenderer.cpp  MyRenderer.h  main.cpp
MyRenderer/core/: BS_thread_pool.hpp  math.h  matrix.h  vector.h  window.cpp  window.h  windows.h
MyRenderer/function/: Motion.cpp  Motion.h  camera.cpp  camera.h  light.cpp  light.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  shadow.h
MyRenderer/lib/: tiny_obj_loader.h
MyRenderer/resources/: model.cpp  model.h  texture.cpp  texture.h  utility.h
test/: i_nx.hdr
